--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,11 @@ li {
     line-height: 30px;
     padding: 10px;
 }
+
+span {
+    cursor: pointer;
+}
+
+.completed {
+    text-decoration: line-through;
+}
